remove vertx logging. use builders.